--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-django
-python
-django-heroku
+asgiref==3.5.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+distlib==0.3.4
+dj-database-url==0.5.0
+Django==4.0.3
+django-heroku==0.3.1
+filelock==3.6.0
+idna==3.3
+platformdirs==2.5.1
+psycopg2==2.9.3
+requests==2.27.1
+six==1.16.0
+sqlparse==0.4.2
+tzdata==2022.1
+urllib3==1.26.8
+virtualenv==20.13.2
+whitenoise==6.0.0
